--- a/ApiGateway/.classpath
+++ b/ApiGateway/.classpath
@@ -34,6 +34,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/CommonWebService"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/CommonWS"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
