--- a/CommonWebService/.project
+++ b/CommonWebService/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CommonWebService</name>
+	<name>CommonWS</name>
 	<comment></comment>
 	<projects>
 	</projects>
